// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangelogMenu Snapshot Tests > should match snapshot with chapters prop 1`] = `
<button
  aria-controls=:r3:
  aria-expanded=false
  aria-haspopup=dialog
  class=_button _button--primary _button--sm _button--ghost _popover-trigger
  data-ods=popover-trigger
  data-part=trigger
  data-scope=popover
  data-state=closed
  dir=ltr
  id=popover::r2::trigger
  role=button
  tabindex=0
  type=button
>
  <span
    class=_icon _icon--github
    data-ods=icon
    role=presentation
  />
  Roadmap & Changelog
</button>
`;

exports[`ChangelogMenu Snapshot Tests > should match snapshot with custom prefixes 1`] = `
<button
  aria-controls=:r5:
  aria-expanded=false
  aria-haspopup=dialog
  class=_button _button--primary _button--sm _button--ghost _popover-trigger
  data-ods=popover-trigger
  data-part=trigger
  data-scope=popover
  data-state=closed
  dir=ltr
  id=popover::r4::trigger
  role=button
  tabindex=0
  type=button
>
  <span
    class=_icon _icon--github
    data-ods=icon
    role=presentation
  />
  Roadmap & Changelog
</button>
`;

exports[`ChangelogMenu Snapshot Tests > should match snapshot with default props 1`] = `
<button
  aria-controls=:r1:
  aria-expanded=false
  aria-haspopup=dialog
  class=_button _button--primary _button--sm _button--ghost _popover-trigger
  data-ods=popover-trigger
  data-part=trigger
  data-scope=popover
  data-state=closed
  dir=ltr
  id=popover::r0::trigger
  role=button
  tabindex=0
  type=button
>
  <span
    class=_icon _icon--github
    data-ods=icon
    role=presentation
  />
  Roadmap & Changelog
</button>
`;

exports[`ChangelogMenu Snapshot Tests > should match snapshot with different link URLs 1`] = `
<button
  aria-controls=:r7:
  aria-expanded=false
  aria-haspopup=dialog
  class=_button _button--primary _button--sm _button--ghost _popover-trigger
  data-ods=popover-trigger
  data-part=trigger
  data-scope=popover
  data-state=closed
  dir=ltr
  id=popover::r6::trigger
  role=button
  tabindex=0
  type=button
>
  <span
    class=_icon _icon--github
    data-ods=icon
    role=presentation
  />
  Roadmap & Changelog
</button>
`;

exports[`ChangelogMenu Snapshot Tests > should match snapshot with long URLs 1`] = `
<button
  aria-controls=:rb:
  aria-expanded=false
  aria-haspopup=dialog
  class=_button _button--primary _button--sm _button--ghost _popover-trigger
  data-ods=popover-trigger
  data-part=trigger
  data-scope=popover
  data-state=closed
  dir=ltr
  id=popover::ra::trigger
  role=button
  tabindex=0
  type=button
>
  <span
    class=_icon _icon--github
    data-ods=icon
    role=presentation
  />
  Roadmap & Changelog
</button>
`;

exports[`ChangelogMenu Snapshot Tests > should match snapshot with single chapter 1`] = `
<button
  aria-controls=:r9:
  aria-expanded=false
  aria-haspopup=dialog
  class=_button _button--primary _button--sm _button--ghost _popover-trigger
  data-ods=popover-trigger
  data-part=trigger
  data-scope=popover
  data-state=closed
  dir=ltr
  id=popover::r8::trigger
  role=button
  tabindex=0
  type=button
>
  <span
    class=_icon _icon--github
    data-ods=icon
    role=presentation
  />
  Roadmap & Changelog
</button>
`;
